--- a/notes.html
+++ b/notes.html
@@ -219,13 +219,13 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>📝 My Cute Notes</h1>
+            <h1>📝 For my cutie</h1>
             <p>Keep track of your thoughts and ideas ✨</p>
         </div>
 
         <div class="note-form">
             <div class="form-group">
-                <input type="text" id="noteTitle" placeholder="Note title... 💭" maxlength="100">
+                <input type="text" id="noteTitle" placeholder="Note title... 💭" maxlength="300">
             </div>
             <div class="form-group">
                 <textarea id="noteContent" placeholder="Write your note here... ✍️"></textarea>
